Update: Modify Supabase database connection URL format

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE_URL=postgresql://postgres.aejupvrzokmyyzrqaarb:[YOUR-PASSWORD]@aws-0-eu-west-3.pooler.supabase.com:6543/postgres
+DATABASE_URL=postgresql://postgres:Yanix244501@@db.aejupvrzokmyyzrqaarb.supabase.co:5432/postgres
