Feature: Add POST route for creating new users

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE_URL=postgresql://postgres:Yanix244501@@db.aejupvrzokmyyzrqaarb.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.aejupvrzokmyyzrqaarb:Yanix244501@@aws-0-eu-west-3.pooler.supabase.com:5432/postgres
